# Clod-Helper-v1

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: claude-desktop-setup.ps1  claude-setup.ps1  local-proxy.py
src-tauri/src/: commands.rs  lib.rs  main.rs  proxy.rs  system.rs
src/components/: ActionCard.tsx  Button.tsx  CountryFlag.tsx  StatusPill.tsx  SuccessCheck.tsx  WizardShell.tsx
src/lib/: api.ts  types.ts
src/wizard/: StepDeps.tsx  StepInstall.tsx  StepMode.tsx  StepProxy.tsx  StepWelcome.tsx  SuccessScreen.tsx
